<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snaps</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Select which snaps you would like to save, then click the \'ready\' button. Your snaps will be in a folder called \'savedsnaps\' in the root of your sdcard.</string>
    
    <string name="video">Videos</string>
    <string name="picture">Pictures</string>
    <string name="story">Stories (disabled)</string>
    <string name="readyBtn">Save Snaps!</string>
    <string name="gallery">Add to gallery</string><string name="footer">Original code: Thomas Grothe. Forked by: Pato Lankenau</string>

</resources>
