<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/instructions"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/footer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/checkRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="Checking for root access..."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkGallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/readyBtn" />

    <CheckBox
        android:id="@+id/checkVids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkRoot"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="28dp"
        android:text="@string/video" />

    <CheckBox
        android:id="@+id/checkPics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkVids"
        android:layout_alignBottom="@+id/checkVids"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/picture" />

    <CheckBox
        android:id="@+id/checkStories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/checkPics"
        android:text="@string/story" />

    <CheckBox
        android:id="@+id/checkGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkStories"
        android:layout_alignBottom="@+id/checkStories"
        android:layout_alignLeft="@+id/checkVids"
        android:text="@string/gallery" />

</RelativeLayout>